# telegram-archive-bot

./: .env.example  .gitignore  AI_PROJECT_CONTEXT.md  Dockerfile  README.md  RELEASE_READINESS.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/archive/: downloader.py  engine.py  resume.py  service.py  uploader.py
app/bot/: client.py  handlers.py  keyboards.py
app/config/: settings.py
app/database/: base.py  db.py  models.py  repositories.py
app/mirror/: backlog.py  control.py  dialogs.py  listener.py  media.py  runtime.py  throttle.py  transfer.py
app/services/: auth.py  logger.py  queue.py  worker.py
app/utils/: helpers.py
deploy/: bootstrap_deploy.sh  find_and_redeploy.sh  manual_deploy.sh  setup_deploy_secrets.sh  telegram-mirror.service
migrations/: env.py
migrations/versions/: 0001_archive_jobs.py  0001_mirror_state.py  0002_mirror_config.py
scripts/: generate_session.py
tests/: conftest.py  test_archive_integration.py  test_auth.py  test_control.py  test_dialogs.py  test_media.py  test_queue.py  test_repository.py  test_resume.py  test_runtime.py  test_service.py  test_throttle.py  test_transfer.py
