[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-archive-bot"
version = "2.1.0"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13,<2.0",
    "pyrogram>=2.0,<3.0",
    "python-dotenv>=1.0",
    "SQLAlchemy>=2.0,<3.0",
]

[project.optional-dependencies]
speedups = [
    "tgcrypto>=1.2",
]

dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
packages = ["app"]
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
